Updated Text-Image and Added Text Image Overlay Section (#251)

--- a/sections/dev__image-text.liquid
+++ b/sections/dev__image-text.liquid
@@ -23,7 +23,7 @@
 
 {% schema %}
 {
-  "name": "Image with Text Overlay",
+  "name": "Image and Text Container",
   "settings": [
     {
       "type": "text",
@@ -115,7 +115,7 @@
   ],
   "presets": [
     {
-      "name": "Image with Text Overlay",
+      "name": "Image and Text Container",
       "category": "Custom"
     }
   ]
