--- a/sections/dev__back-to-the-top.liquid
+++ b/sections/dev__back-to-the-top.liquid
@@ -5,15 +5,14 @@
     title="Back to the top"
     class="back-to-top_classes {{ section.settings.back-to-top_classes }}"
   >
-    <i class="arrow_classes {{ section.settings.arrow_classes }}"></i>
+    {% render 'arrow' %}
   </a>
 </section>
 
 <style>
   .back-to-top_classes {
     transition: opacity 0.3s;
-    opacity: 0;
-    text-decoration: none;
+    opacity: 1;
   }
   
   .back-to-top_classes.show {
@@ -69,13 +68,7 @@
       "type": "textarea",
       "id": "back-to-top_classes",
       "label": "Back to Top Section Styling",
-      "default": "fixed no-underline text-[#7a7a7a] bg-[#eee] z-[60000] transition-[#eee] duration-[0.3s,#7a7a7a] delay-[0.3s] p-[0.3em] rounded-tl-[3px] rounded-bl-[3px] rounded-[10px] right-0 bottom-[4em] hover:no-underline hover:text-[#414141] hover:bg-[#ddd]"
-    },
-    {
-      "type": "textarea",
-      "id": "arrow_classes",
-      "label": "Arrow Icon Styling",
-      "default": "inline-block w-0 h-0 border-b-[25px] border-b-black border-x-[20px] border-x-transparent border-solid"
+      "default": "fixed bottom-4 right-4 bg-gray-300 rounded-full p-4 hover:bg-gray-400"
     }
   ],
   "presets": [
